# agent-factory

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: README.md
docs/api/: README.md
examples/: comprehensive_demo.py
kubernetes/base/: configmap.yaml  deployment.yaml  ingress.yaml
kubernetes/overlays/production/: kustomization.yaml  production-patches.yaml
scripts/: run.sh  setup.sh  setup_and_demo.sh
src/agent_factory/: __init__.py
src/agent_factory/agent_builder/: __init__.py  builder.py  connection_manager.py  tool_manager.py  validators.py
src/agent_factory/api/: __init__.py  config.py  main.py  middleware.py
src/agent_factory/api/routers/: agents.py  connections.py  health.py  interactive.py  tools.py  workflows.py
src/agent_factory/connections/: __init__.py  database.py
src/agent_factory/core/: __init__.py  models.py
src/agent_factory/interactive/: __init__.py  prompt_engine.py
src/agent_factory/orchestration/: __init__.py  langgraph_integration.py  workflow.py
src/agent_factory/providers/: __init__.py  llm.py
src/agent_factory/rag/: pipeline.py
src/agent_factory/ui/: __init__.py  interactive.py  main.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_agent_builder.py  test_models.py
